# bazel-non-transitive

./: BUILD.bazel  README.md  UsesCanonical.java  WantsToUseNewVer.java
